@@ -2,3 +2,5 @@
 :revnumber: 0.4.0
 :revdate: 2025-XX-XX
 
+* *update*: `Where` can handle basic strings and key => value arrays.
+* *update*: `AbstractTable` supports `Where` objects.
